# LabelAtlasEditor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  params.json
LabelAtlasEditor/: LabelAtlasEditor.py
LabelAtlasModule/LabelAtlasTools/: CMakeLists.txt
LabelAtlasTools/: CMakeLists.txt
OpenAtlasModule/OpenAtlasTools/: CMakeLists.txt
OpenAtlasModule/OpenAtlasTools/OpenAtlasEditor/: CMakeLists.txt  OpenAtlasEditor.py
OpenAtlasModule/OpenAtlasTools/OpenAtlasEditor/Resources/: atlasDustCleanup.py  atlasSmallIslandCleanup.py
